Fixing up spacing on small screens for process shots.

--- a/css/general.css
+++ b/css/general.css
@@ -443,6 +443,7 @@ h3 {
 
 .portimages {
   margin-bottom: 0;
+  max-width: 100%;
 }
 
 .text {
